--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,12 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="container">
+  <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <div class="navbar-brand"><span class="glyphicon glyphicon-book"></span><%= link_to "  Library", '#', id: "logo" %></div>
+      <div class="navbar-brand"><span class="glyphicon glyphicon-book"></span><%= link_to t(".library"), "/" , id: "logo" %></div>
     </div> 
     <form class="navbar-form navbar-left" action="#">
       <div class="input-group">
