--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,17 +39,9 @@
             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kiến thức kinh tế</a></li>
             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kinh doanh tổng hợp</a></li> 
           </ul>
-          <!-- <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Sách nói</a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kinh doanh</a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kỹ năng</a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Tủ sách gia đình</a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Tạp chí & Chuyên đề</a></li>
-           <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Tuyển tập chọn lọc</a></li>
-          </ul> -->
         </li>
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><%= link_to " Signup", signup_path, class:"glyphicon glyphicon-user" %></li>
+        <li><%= link_to " Login", '#', class:"glyphicon glyphicon-log-in" %></li>
       </ul>
     </nav>
   </div>
