--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,16 @@
     <%= render 'layouts/shim' %>
 	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <%= render 'layouts/header' %>
   </head>
   <body>
+    <%= render 'layouts/header' %>
+    <div class="container">
+    <br>
+    <% flash.each do |message_type, message| %>
+      <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+    <% end %>
     <%= yield %>
+    </div>
     <%= render 'layouts/footer' %>
   </body>
 </html>
