--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,9 +20,11 @@
     </form> 
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home",   '#' %></li>
+        <li><%= link_to "Home", '/' %></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Categories<span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            Categories<b class="caret"></b>
+          </a>
           <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
             <li role="presentation" class="dropdown-header">SÁCH NÓI</li>
             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Truyện đọc</a></li>
@@ -40,8 +42,24 @@
             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kinh doanh tổng hợp</a></li> 
           </ul>
         </li>
-        <li><%= link_to " Signup", signup_path, class:"glyphicon glyphicon-user" %></li>
-        <li><%= link_to " Login", '#', class:"glyphicon glyphicon-log-in" %></li>
+        <% if logged_in? %>
+          <li><%= link_to "Users", '#' %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Account <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Settings", '#' %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "Log out", logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to "Log in", login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
