--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -10,7 +10,18 @@
 /* header */
 .navbar-inverse {
   background-color: #fff;
-  border-color: #2cc8c8;;
+  border-color: #2cc8c8;
+  font-family: "Arial";
+}
+.navbar-brand {
+  float: left;
+  padding: 9px 15px;
+  font-size: 18px;
+  line-height: 20px;
+  height: 50px;
+}
+.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
+  margin-left: 40px;
 }
 .navbar-form .input-group > .form-control {
     width: 154%;
@@ -119,4 +130,17 @@ aside {
   .form-control {
     color: $state-danger-text;
   }
+}
+.checkbox {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  span {
+    margin-left: 20px;
+    font-weight: normal;
+  }
+}
+
+#session_remember_me {
+  width: auto;
+  margin-left: 0;
 }
